[metadata]
name = dirimport
version = attr: dirimport.__main__.VERSION
url = https://github.com/wtnb75/dirimport
author = Takashi WATANABE
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = import your library without __init__.py
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:

[options.entry_points]
console_scripts =
  dirimport=dirimport.__main__:cli
